--- a/index.html
+++ b/index.html
@@ -23,76 +23,151 @@
       </header>
       <div class="dashboard">
         <div class="card facebook">
-          <p>@nathanf</p>
-          <h2>1987</h2>
-          <p>Followers</p>
-          <p class="change">+12 Today</p>
+          <p>
+            <img src="images/icon-facebook.svg" alt="Facebook Icon" /> @nathanf
+          </p>
+          <h2>1000</h2>
+          <p>FOLLOWERS</p>
+          <p class="change">
+            <img src="images/icon-up.svg" alt="Arrow Up" /> 12 Today
+          </p>
         </div>
         <div class="card twitter">
-          <p>@nathanf</p>
+          <p>
+            <img src="images/icon-twitter.svg" alt="Twitter Icon" /> @nathanf
+          </p>
           <h2>1044</h2>
-          <p>Followers</p>
-          <p class="change">+99 Today</p>
+          <p>FOLLOWERS</p>
+          <p class="change">
+            <img src="images/icon-up.svg" alt="Arrow Up" /> 99 Today
+          </p>
         </div>
         <div class="card instagram">
-          <p>@realnathanf</p>
+          <p>
+            <img src="images/icon-instagram.svg" alt="Instagram Icon" />
+            @realnathanf
+          </p>
           <h2>11k</h2>
-          <p>Followers</p>
-          <p class="change">+1099 Today</p>
+          <p>FOLLOWERS</p>
+          <p class="change">
+            <img src="images/icon-up.svg" alt="Arrow Up" /> 1099 Today
+          </p>
         </div>
         <div class="card youtube">
-          <p>Nathan F.</p>
+          <p>
+            <img src="images/icon-youtube.svg" alt="YouTube Icon" /> Nathan F.
+          </p>
           <h2>8239</h2>
-          <p>Subscribers</p>
-          <p class="change negative">-144 Today</p>
+          <p>SUBSCRIBERS</p>
+          <p class="change negative">
+            <img src="images/icon-down.svg" alt="Arrow Down" /> 144 Today
+          </p>
         </div>
       </div>
       <div class="overview">
         <h2>Overview - Today</h2>
         <div class="overview-cards">
           <div class="overview-card facebook">
-            <p>Page Views</p>
-            <h3>87</h3>
-            <p class="change">+3%</p>
+            <div>
+              <p>Page Views</p>
+              <h3>870</h3>
+            </div>
+            <div>
+              <img src="images/icon-facebook.svg" alt="Facebook Icon" />
+              <p class="change">
+                <img src="images/icon-up.svg" alt="Arrow Up" /> 3%
+              </p>
+            </div>
           </div>
           <div class="overview-card facebook">
-            <p>Likes</p>
-            <h3>52</h3>
-            <p class="change negative">-2%</p>
+            <div>
+              <p>Likes</p>
+              <h3>52</h3>
+            </div>
+            <div>
+              <img src="images/icon-facebook.svg" alt="Facebook Icon" />
+              <p class="change negative">
+                <img src="images/icon-down.svg" alt="Arrow Down" /> 2%
+              </p>
+            </div>
           </div>
-          <div class="overview-card twitter">
-            <p>Retweets</p>
-            <h3>117</h3>
-            <p class="change">+303%</p>
-          </div>
-          <div class="overview-card twitter">
-            <p>Likes</p>
-            <h3>507</h3>
-            <p class="change">+553%</p>
+
+          <div class="overview-card instagram">
+            <div>
+              <p>Likes</p>
+              <h3>5462</h3>
+            </div>
+            <div>
+              <img src="images/icon-instagram.svg" alt="Instagram Icon" />
+              <p class="change">
+                <img src="images/icon-up.svg" alt="Arrow Up" /> 2257%
+              </p>
+            </div>
           </div>
           <div class="overview-card instagram">
-            <p>Likes</p>
-            <h3>5462</h3>
-            <p class="change">+2257%</p>
+            <div>
+              <p>Profile Views</p>
+              <h3>52k</h3>
+            </div>
+            <div>
+              <img src="images/icon-instagram.svg" alt="Instagram Icon" />
+              <p class="change">
+                <img src="images/icon-up.svg" alt="Arrow Up" /> 1375%
+              </p>
+            </div>
           </div>
-          <div class="overview-card instagram">
-            <p>Profile Views</p>
-            <h3>52k</h3>
-            <p class="change">+1375%</p>
+          <div class="overview-card twitter">
+            <div>
+              <p>Retweets</p>
+              <h3>117</h3>
+            </div>
+            <div>
+              <img src="images/icon-twitter.svg" alt="Twitter Icon" />
+              <p class="change">
+                <img src="images/icon-up.svg" alt="Arrow Up" /> 303%
+              </p>
+            </div>
+          </div>
+          <div class="overview-card twitter">
+            <div>
+              <p>Likes</p>
+              <h3>507</h3>
+            </div>
+            <div>
+              <img src="images/icon-twitter.svg" alt="Twitter Icon" />
+              <p class="change">
+                <img src="images/icon-up.svg" alt="Arrow Up" /> 553%
+              </p>
+            </div>
           </div>
           <div class="overview-card youtube">
-            <p>Likes</p>
-            <h3>107</h3>
-            <p class="change negative">-19%</p>
+            <div>
+              <p>Likes</p>
+              <h3>107</h3>
+            </div>
+            <div>
+              <img src="images/icon-youtube.svg" alt="YouTube Icon" />
+              <p class="change negative">
+                <img src="images/icon-down.svg" alt="Arrow Down" /> 19%
+              </p>
+            </div>
           </div>
           <div class="overview-card youtube">
-            <p>Total Views</p>
-            <h3>1407</h3>
-            <p class="change negative">-12%</p>
+            <div>
+              <p>Total Views</p>
+              <h3>1407</h3>
+            </div>
+            <div>
+              <img src="images/icon-youtube.svg" alt="YouTube Icon" />
+              <p class="change negative">
+                <img src="images/icon-down.svg" alt="Arrow Down" /> 12%
+              </p>
+            </div>
           </div>
         </div>
       </div>
     </div>
+
     <script src="script.js"></script>
   </body>
 </html>
