added some styling

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <h2>Overview - Today</h2>
         <div class="overview-cards">
           <div class="overview-card facebook">
-            <div>
+            <div class="overview-views">
               <p>Page Views</p>
               <h3>870</h3>
             </div>
@@ -167,7 +167,8 @@
         </div>
       </div>
     </div>
-
+    <!-- This will create a global `JSON5` variable. -->
+    <script src="https://unpkg.com/json5@2/dist/index.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
